--- a/css/style.css
+++ b/css/style.css
@@ -1,35 +1,146 @@
-
-
-div.body {
-    padding: 25px;
-}
-
-div.header {
-    background-image: url(pictures/cover.jpg);
-    background-repeat: no-repeat;
-    height: 160px;
-    border: 2px solid black;
-    padding: 25px;
-    width: fit-content;
-    background-size: auto;
-    
-}
-
-
-
-.footer {
-    height: 100px;
-    text-align: right;
-    position: absolute;
-    display: flex;
-    align-items: center;
-    bottom: 0;
-    width: 100%;
-    font-size: 11pt;
+html {
     background: #778899;
+}
+
+body {
+    background-color: #f1f1f1;
+    color: #1d1d1f;
+    margin: 0;
+    font-family: "SF Pro Display", "SF Pro Icons", "Helvetica Neue", "Helvetica", "Arial", sans-serif;
+}
+
+body li,
+body span,
+body p {
+    font-size: 14px;
+}
+
+body a {
+    text-decoration: none;
+}
+
+body a:hover {
+    text-decoration: underline;
+}
+
+body dt {
+    color: #D2691E;
+}
+
+body p::first-letter {
+    font-size: 150%;
+    float: left;
+    line-height: 80%;
+    width: 0.7em;
+    padding: 6px;
+}
+
+body>div:not(.mood_section) {
+    margin-left: 15px;
+    margin-right: 15px;
+    padding: 15px;
+}
+
+body div.header_section {
+    color: #fff;
+    background: #778899;
+    margin-left: 0;
+    margin-right: 0;
+    padding-bottom: 0;
+}
+
+.menus {
+    display: flex;
+    flex-direction: row;
+}
+
+.menus .menu_item {
+    padding: 6px;
+    color: #fff;
+}
+
+.menus .menu_item:hover {
+    opacity: .8;
+    text-decoration: none;
+    background: #20B2AA;
+}
+
+.special {
+    color: #20B2AA;
+    font-weight: 500;
+}
+
+.movies_section ol {
+    display: flex;
+    flex-direction: column-reverse;
+}
+
+.mood_section {
+    display: flex;
+    flex-direction: column;
+    padding: 15px;
+}
+
+.mood_section .mood_images {
+    float: left;
+    width: 100%;
+    display: inline-flex;
+}
+
+.mood_section .mood_images div {
+    width: 50%;
+    margin: 10px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.mood_section .mood_images img {
+    width: 100%;
+    max-width: 700px;
+    height: 315px;
+}
+
+.mood_section .sad div,
+.mood_section .happy div {
+    border: solid 1px grey;
+}
+
+.mood_section span {
+    padding: 10px;
+    width: 50px;
+    text-align: center;
+    color: #ffffff;
+}
+
+.mood_section .happy span {
+    background: #3CB371;
+}
+
+.mood_section .sad span {
+    background: #CD5C5C;
+}
+
+footer {
+    color: #fff;
+    width: 100%;
+    padding-top: 20px;
+    padding-bottom: 20px;
+    align-items: center;
+    background: #778899;
+    display: inline-flex;
     justify-content: space-between;
 }
 
-.footer>div {
-    padding: 15px;
+footer div {
+    display: flex;
+}
+
+footer div:first-child {
+    flex-direction: column;
+    margin-left: 15px;
+}
+
+footer div:last-child {
+    margin-right: 15px;
 }
