--- a/css/style.css
+++ b/css/style.css
@@ -35,7 +35,7 @@ body>div:not(.mood_section) {
 
 body div.header_section {
     color: #fff;
-    background: #778899;
+    background: #adafb1;
     margin-left: 0;
     margin-right: 0;
     padding-bottom: 0;
@@ -119,7 +119,7 @@ footer {
     padding-top: 20px;
     padding-bottom: 20px;
     align-items: center;
-    background: #778899;
+    background: #adafb1;
     display: inline-flex;
     justify-content: space-between;
 }
